--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -9,6 +9,8 @@
                 <li><a href="/admin/products">Listado de productos</a</li>
                 <li><a href="/admin/products/guitar/add">Agregar guitarra</a></li>
                 <li><a href="/admin/products/accesory/add">Agregar accesorio</a></li>
+                <li><a href="/admin/products/pedal/add">Agregar Pedal</a></li>
+                <li><a href="/admin/products/cable/add">Agregar Cable</a></li>
             </ul>
         </div>
         <div class="menu-burger">
