--- a/src/views/admin/products/editGuitar.ejs
+++ b/src/views/admin/products/editGuitar.ejs
@@ -1,92 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<%-include('../partials/head')  %> 
-<body class="home-container admin-container">
-    <%-include('../partials/header')  %> 
+<%-include('../partials/head', {title: 'Agregar producto'})  %> 
+<body class="listProduct home-container admin-container">
     
-    <form action="/admin/products/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="form-addProduct">
+    <%-include('../partials/header')  %>    
+    
+    
+    <form action="/admin/products/guitar/<%= product.id %>?_method=PUT " method="POST" enctype="multipart/form-data" class="form-addProduct">
         
         <div class="form-container1">
             <div class="new-products-separador"></div>
-            <h2>EDITAR GUITARRA: <%= product.name %>  </h2>
+            <h2>EDITAR GUITARRA: <%= product.name %></h2>
             <div class="inputs-container1">
                 <div class="input-container1">
-                    <label for="name">Nombre del producto</label>
-                    <input type="text" name="name" id="name" placeholder="Ej: Guitarra Gibson" class="input-style1" value="<%= product.name %>"  >
-                    <span class="error-message1">Debe ingresar un nombre de producto</span>
+                    <label for="nameProduct">Nombre del producto</label>
+                    <input type="text" name="nameProduct" id="nameProduct" placeholder="Ej: Guitarra Gibson" class="input-style1" value="<%= product.name %>">
+                    <% if (locals.errors && errors.nameProduct) { %>
+                        <span class="error-message1"><%= errors.nameProduct.msg %></span>
+                    <% } %>
                 </div>
                 <div class="input-container1">
-                    <label for="marca">Marca</label>
-                    <input type="text" name="marca" id="marca" placeholder="Ej:Gibson" class="input-style1" value="<%= product.marca %>">
-                    <span class="error-message1">Debe ingresar la marca</span>
-                </div>
-                <div class="input-container1">
-                    <label for="line">Linea</label>
-                    <input type="text" name="line" id="line" placeholder="Ej:SE series" class="input-style1" value="<%= product.line %>">
-                    <span class="error-message1">Debe ingresar la serie</span>
-                </div>
-                <div class="input-container1">
-                    <label for="model">Modelo</label>
-                    <input type="text" name="model" id="model" placeholder="Ej: Standar 24" class="input-style1" value="<%= product.model %>">
-                    <span class="error-message1">Debe ingresar modelo</span>
-                </div>
-                <div class="input-container1">
-                    <label for="hand">Orientacion de la mano</label>
-                    <input type="text" name="hand" id="hand" placeholder="Ej:Diestro" class="input-style1" value="<%= product.hand %>">
-                    <span class="error-message1">Debe ingresar la orientacion</span>
+                    <label for="marca">Seleccione marca</label>
+                    <select name="marca" id="marca" >
+                        <option value="<% product.marca.id %> " disabled selected> <%= product.marca.marca  %>  </option>
+                        <% listaMarcas.forEach(marca => { %>
+                            <option value="<%= marca.id %>" <%= (locals.old && old.marca) && old.marca === marca.marca ? 'selected' : null %>  ><%= marca.marca %></option>
+                        <% }); %>
+                        
+                    </select>
+                    <% if (locals.errors && errors.marca) { %>
+                        <span class="error-message1"><%= errors.marca.msg %></span>
+                    <% } %>
+                    
                 </div>
                  <div class="input-container1">
                     <label for="price">Precio</label>
                     <input type="number" name="price" id="price" placeholder="Ej: 3000" class="input-style1" value="<%= product.price %>">
+                    <% if (locals.errors && errors.price) { %>
+                        <span class="error-message1"><%= errors.price.msg  %> </span>
+                    <% } %>
+                    
                 </div>
                 <div class="input-container1">
+                    <label for="line">Linea</label>
+                    <input type="text" name="line" id="line"  placeholder="Ej:SE series" class="input-style1" value="<%= product.guitarDetail.line  %>">
+                    <% if (locals.errors && errors.line) { %>
+                        <span class="error-message1"><%= errors.line.msg  %> </span>
+                    <% } %>
+                    
+                </div>
+                <div class="input-container1">
+                    <label for="model">Modelo</label>
+                    <input type="text" name="model" id="model"  placeholder="Ej: Standar 24" class="input-style1"  value="<%= product.guitarDetail.model  %>">
+                    <% if (locals.errors && errors.model) { %>
+                        <span class="error-message1"><%= errors.model.msg  %> </span>
+                    <% } %>
+                    
+                </div>
+                <div class="input-container1">
+                    <label for="hand">Orientacion de la mano</label>
+                    <input type="text" name="hand" id="hand"  placeholder="Ej:Diestro" class="input-style1" value="<%= product.guitarDetail.hand  %>">
+                    <% if (locals.errors && errors.hand) { %>
+                        <span class="error-message1"><%= errors.hand.msg  %> </span>
+                    <% } %>
+                    
+                </div>
+                
+                <div class="input-container1">
                     <label for="color">Color</label>
-                    <input type="text" name="color" id="color" placeholder="Ej: Sunsburts" class="input-style1" value="<%= product.color %>">
+                    <input type="text" name="color"  id="color" placeholder="Ej: Sunsburts" class="input-style1" value="<%= product.guitarDetail.color  %>">
+                    <% if (locals.errors && errors.color) { %>
+                        <span class="error-message1"><%= errors.color.msg  %> </span>
+                    <% } %>
+                    
                 </div>
                 <div class="input-container1">
                     <label for="materialBody">Tipo de madera del cuerpo</label>
-                    <input type="text" name="materialBody" id="materialBody" placeholder="Ej:Caoba" class="input-style1" value="<%= product.materialBody %>">
-                    <span class="error-message1">Debe ingresar el material</span>
+                    <input type="text" name="materialBody" id="materialBody" placeholder="Ej:Caoba" class="input-style1" value="<%= product.guitarDetail.material_body  %>">
+                    <% if (locals.errors && errors.materialBody) { %>
+                        <span class="error-message1"><%= errors.materialBody.msg %></span>
+                    <% } %>
+                    
                 </div>
                 <div class="input-container1">
                     <label for="materialFretboard">Material del diapason</label>
-                    <input type="text" name="materialFretboard" id="materialFretboard" placeholder="Ej:Palo rosa" class="input-style1" value="<%= product.materialFretboard %>">
-                    <span class="error-message1">Debe ingresar el material</span>
+                    <input type="text" name="materialFretboard" id="materialFretboard" placeholder="Ej:Palo rosa" class="input-style1" value="<%= product.guitarDetail.material_fretboard %>">
+                    <% if (locals.errors && errors.materialFretboard) { %>
+                        <span class="error-message1"><%= errors.materialFretboard.msg  %> </span>
+                    <% } %>
+                    
                 </div>
                 <div class="input-container1">
                     <label for="bodyFinish">Acabado del cuerpo</label>
-                    <input type="text" name="bodyFinish" id="bodyFinish" placeholder="Ej:Polurietano" class="input-style1" value="<%= product.bodyFinish %>">
-                    <span class="error-message1">Debe ingresar el acabado</span>
+                    <input type="text" name="bodyFinish" id="bodyFinish" placeholder="Ej:Polurietano" class="input-style1" value="<%= product.guitarDetail.body_finish  %>">
+                    <% if (locals.errors && errors.bodyFinish) { %>
+                        <span class="error-message1"><%= errors.bodyFinish.msg %></span>
+                    <% } %> 
                 </div>
-                
-                
                 <div class="input-container1 file-container">
                     <label for="image"  class="btn-file">Agregar imagenes</label>
-                    <input type="file" name="image" id="image" accept=".png, .jpg, .svg" class="file">
-                    <span class="error-message1">Debes agregar una imagen</span>
+                    <input type="file" name="image" id="image" accept=".png, .jpg, .svg" class="file" multiple>
+                    <% if (locals.errors && errors.image) { %>
+                        <span class="error-message1"><%= errors.image.msg %></span>
+                    <% } %>
+                    
                 </div>
-
-                
-                
-                <div class="input-container1">
-                    <label for="category">Categoria</label>
-                    <select name="category" id="category">
-                        <option selected hidden value="guitar" class="guitar" >Guitarra</option>
-                    </select>
-                 </div>
-                 <div class="btn-switch input-container1">
-                     
-                     <input <%= product.stock ? "checked" : ""  %>  type="checkbox" name="stock" role="switch" id="stock" >
-                     <label for="stock" class="lbl-switch"></label>
-                     <span class="lbl-stock">Stock disponible</span>
-                 </div>
+            
+                <div class="btn-switch input-container1">
+                    
+                    <input type="checkbox" name="stock"  id="stock" <%= product.stock === true ? "checked" : null %>>
+                    <label for="stock" class="lbl-switch"></label>
+                    <span class="lbl-stock">Stock disponible</span>
+                </div>
             </div>
              <div class="input-container1 input-description-container">
                 <label for="description">Descripcion</label>
-                <textarea name="description" id="description" cols="30" rows="10"><%= product.description%></textarea>
+                <textarea name="description" id="description" cols="30" rows="10" ><%= product.description %></textarea>
+                <% if (locals.errors && errors.description) { %>
+                    <span class="error-message1"><%= errors.description.msg %></span>
+                <% } %>
             </div>
             <div class="btn-container">
-                <button class="btn-style" type="submit" >Editar</button>
+                <button class="btn-style" type="submit" >Crear</button>
             </div>
         </div>
     </form>
